// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`docs/rules/element-case.md inline validation: correct 1`] = `[]`;

exports[`docs/rules/element-case.md inline validation: incorrect 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 1,
        "message": "Element "DIV" should be lowercase",
        "offset": 1,
        "ruleId": "element-case",
        "ruleUrl": "https://html-validate.org/rules/element-case.html",
        "selector": "div",
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<DIV>...</DIV>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/element-case.md inline validation: matching 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 13,
        "line": 1,
        "message": "Start and end tag must not differ in casing",
        "offset": 12,
        "ruleId": "element-case",
        "ruleUrl": "https://html-validate.org/rules/element-case.html",
        "selector": "foobar",
        "severity": 2,
        "size": 7,
      },
    ],
    "source": "<FooBar>...</Foobar>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/element-case.md inline validation: multiple 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 3,
        "message": "Element "fooBar" should be lowercase or PascalCase",
        "offset": 39,
        "ruleId": "element-case",
        "ruleUrl": "https://html-validate.org/rules/element-case.html",
        "selector": "foobar:nth-child(3)",
        "severity": 2,
        "size": 6,
      },
    ],
    "source": "<foo-bar></foo-bar>
<FooBar></FooBar>
<fooBar></fooBar>",
    "warningCount": 0,
  },
]
`;
